--- a/2_CSS/css/layout3.css
+++ b/2_CSS/css/layout3.css
@@ -67,47 +67,29 @@ div {
     right: 50px;
 }
 
-/*************************************/
 
-.div_test {
-    width: 250px;
-    height: 250px;
+.table-test {
+    width: 300px;
+    height: 300px;
+    border: 1px solid;
 }
 
-.div_test > div {
-    width: 100%;
-    height: 50px;
-    border: 0;
-}
-
-div[class *= "child"] > div {
-    width: 50px;
-    height: 50px;
+.table-test td {
     border: 1px solid white;
-
-    float: left;
 }
 
-.div_first > div:first-child, .div_green > div:nth-child(2)  {
+.table-test  tr:nth-child(3) td:first-child,
+.table-test  tr:nth-child(4) td:first-child,
+.table-test  tr:nth-child(5) td:first-child,
+.table-test  tr:nth-child(5) td:nth-child(2)
+{
     background-color: red;
 }
 
-.div_green > div:nth-child(3), .div_green2 > div:nth-child(2n) {
+.table-test  tr:nth-child(4) td:nth-child(2),
+.table-test  tr:nth-child(4) td:nth-child(3),
+.table-test  tr:nth-child(5) td:nth-child(3),
+.table-test  tr:nth-child(5) td:nth-child(4)
+ {
     background-color: green;
 }
-​
-        /****************************************************************/
-​
-.table_test {
-    width: 250px;
-    height: 250px;
-    border: 1px solid black;
-}
-
-.tr_test > td:first-child, .tr_test3 > td:nth-child(2) {
-    background-color: red;
-}
-
-.tr_test2 > td:nth-child(3), .tr_test3 > td:nth-child(4), .tr_test3 > td:nth-child(2)  {
-    background-color: green;
-}​
